# shmips

./: .gitignore  Cargo.toml  LICENSE  README.md  save_them_fools.code-workspace  shmips.code-workspace
.cargo/: config.toml
assets/: Capybara.glb  Ship.glb  Watermelon.glb
src/: main.rs
